<resources>
    <string name="app_name">Virgil</string>
    <string name="action_settings">Settings</string>
    <string name="server_url">http://52.24.10.104/Virgil_Backend/index.php/</string>
    <string name="get_museum_path">getEntireMuseum/</string>
    <string name="get_all_museums_path">getAllMuseums/</string>
    <string name="action_home">Home</string>
    <string name="action_beacon">Beacon</string>
    <string name="action_search">Search</string>
    <string name="splash">splash screen</string>
    <string name="museum_name">museum name</string>
    <string name="dummy_address">502 n frances "\n"madison, wi, 53703</string>
    <string name="dummy_hours">hours:"\n"mon-fri:8:00 am-5:00 pm"</string>\
    <string name="museum_select">Museums</string>
    <string name="museum_beacon">Beacon</string>
    <string name="museum_favorites">Favorites</string>
    <string name="action_favorites">Favorites</string>
    <string name="museum_map">Map</string>
    <string name="museum_exhibition">Museum Exhibitions</string>
    <string name="Map">Map</string>
    <string name="ask_virgil">Ask Virgil</string>
    <string name="get_beacon_info">See a beacon? Tap this beacon.</string>
    <string name="MuseumImage">Museum Image</string>
    <string name="exhibit_content">Exhibit Content</string>
    <string name="exhibit_title">Exhibit Title</string>
    <string name="added_favorite">Added to favorites</string>
    <string name="unfavorited">Unfavorited</string>
    <string name="add_event">Add Event</string>
    <string name="museum_event_description">image of museum event</string>
    <string name="event_title">Event Title</string>
    <string name="event_date">Date</string>
    <string name="event_hours">Hours</string>
    <string name="event_location">Location</string>
    <string name="event_description">Description</string>
    <string name="not_implemented">not enabled in beta version</string>
</resources>
