<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite_item"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/star_outline"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        android:icon="@drawable/ic_favorite_white_24dp"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_beacon"
        android:orderInCategory="100"
        android:title="@string/action_beacon"
        android:icon="@drawable/ic_bluetooth_searching_white_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/Map"
        android:icon="@drawable/ic_map_white_24dp"
        app:showAsAction="never" />

</menu>
