<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_white_48dp"
            android:title="@string/action_favorites"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_48dp"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map_white_48dp"
            android:title="@string/museum_map" />

        <item
            android:id="@+id/nav_beacon"
            android:icon="@drawable/ic_bluetooth_searching_white_48dp"
            android:title="@string/action_beacon" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_white_48dp"
            android:title="@string/action_search" />
    </group>

    <item android:title="Sub items">
        <menu>
            <item
                android:icon="@mipmap/virgil_white_ic"
                android:title="Sub item 1" />
        </menu>
    </item>

</menu>
