<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_48dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_favorites"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        android:icon="@drawable/ic_favorite_white_48dp"
        app:showAsAction="never" />


    <item
        android:id="@+id/main_beacon"
        android:orderInCategory="100"
        android:title="@string/action_beacon"
        android:icon="@drawable/ic_bluetooth_searching_white_48dp"
        app:showAsAction="never" />



</menu>
