<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_event_text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:contentDescription="@string/museum_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_event_image"
                    android:src="@mipmap/virgil_white_ic"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:id="@+id/rl_title_date">

                <TextView
                    android:id="@+id/tv_event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorTertiary"
                    android:gravity="left"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/rl_location_description"
                android:layout_marginTop="5dp">


             <TextView
                android:text="@string/event_date"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_event_date"
                android:textColor="@color/colorTertiary" />

                <TextView
                    android:text="@string/event_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_event_hours" />

                <TextView
                    android:text="@string/event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_event_location" />

                <TextView
                    android:text="@string/event_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_event_description" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAddEvent"
                    android:layout_width="80dp"
                    android:layout_height="36dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:stateListAnimator="@null"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/add_event" />
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

